# construction_PointLLM

./: .gitignore  pyproject.toml
data/: data_processing.py
pointllm/data/: __init__.py  object_point_dataset.py  utils.py
pointllm/eval/: PointLLM_chat.py
pointllm/model/: pointllm.py
pointllm/model/pointbert/: point_encoder.py
pointllm/train/: pointllm_trainer.py  train.py
scripts/: PointLLM_train_stage1.sh  PointLLM_train_stage2.sh
