[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pointllm"
version = "0.1.2"
description = "Empower large language models to understand point clouds."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "accelerate", "einops", "fastapi", "gradio", "markdown2[all]", "numpy",
    "requests", "sentencepiece", "tokenizers",
    "torch", "torchvision", "uvicorn", "wandb",
    "shortuuid",
    "deepspeed", "peft",
    "transformers",
    "openai", "tqdm",
    "easydict", "timm", "ftfy", "regex", "open3d", "h5py", "termcolor",
    "plyfile", "nltk", "rouge", "scikit-learn", "py-rouge"
]

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]